fix alignment

--- a/csfieldguide/static/interactives/number-memory/scss/number-memory.scss
+++ b/csfieldguide/static/interactives/number-memory/scss/number-memory.scss
@@ -1,6 +1,7 @@
 .number-memory {
   border: 1px solid;
   border-radius: 25px;
+  align-self: center;
 }
 
 #number-memory-title {
